<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_height="wrap_content" android:layout_width="wrap_content">

    <Button
        android:id="@+id/imageViewLeft"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:alpha="0.5"
        android:gravity="center"
        android:text="@string/left"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewUp" />

    <Button
        android:id="@+id/imageViewUp"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:alpha="0.5"
        android:gravity="center_vertical"
        android:text="@string/up"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewLeft"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/imageViewCenter"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:alpha="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageViewLeft"
        app:layout_constraintTop_toBottomOf="@+id/imageViewUp" />

    <Button
        android:id="@+id/imageViewDown"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:alpha="0.5"
        android:gravity="center"
        android:text="@string/down"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewLeft"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCenter" />

    <Button
        android:id="@+id/imageViewRight"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:alpha="0.5"
        android:gravity="center"
        android:text="@string/right"
        android:textSize="30sp"
        app:layout_constraintStart_toEndOf="@+id/imageViewCenter"
        app:layout_constraintTop_toBottomOf="@+id/imageViewUp" />
</android.support.constraint.ConstraintLayout>