<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/mainscreen_title"
        android:textSize="56sp"
        android:typeface="normal"
        app:fontFamily="@font/nanumbarungothicbold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/mainscreen_subtitle"
        android:textSize="30sp"
        app:fontFamily="@font/nanumbarungothic"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/mainscreen_easy"
        android:textAlignment="gravity"
        android:textSize="24sp"
        app:fontFamily="@font/nanumbarungothic"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/mainscreen_hard"
        android:textAlignment="gravity"
        android:textSize="24sp"
        app:fontFamily="@font/nanumbarungothic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="66dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/mainscreen_help"
        android:textColor="@android:color/holo_blue_light"
        android:textSize="24sp"
        app:fontFamily="@font/nanumbarungothic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <include
        android:id="@+id/plusShapedKeypad"
        layout="@layout/plus_shaped_keypad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintStart_toStartOf="parent" />

    <include
        android:id="@+id/mine_controller"
        layout="@layout/mine_controller"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/EasyArrow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:srcCompat="@drawable/arrow"
        tools:layout_editor_absoluteY="192dp" />

    <ImageView
        android:id="@+id/HardArrow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:srcCompat="@drawable/arrow"
        tools:layout_editor_absoluteY="192dp" />

    <ImageView
        android:id="@+id/HelpArrow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:visibility="invisible"
        app:srcCompat="@drawable/arrow"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        tools:layout_editor_absoluteX="225dp"
        tools:layout_editor_absoluteY="288dp" />

    <TextView
        android:id="@+id/helpPlusShapedKeypad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mainscreen_help_toggle_cross"
        app:layout_constraintBottom_toTopOf="@+id/plusShapedKeypad"
        app:layout_constraintEnd_toEndOf="@+id/plusShapedKeypad"
        app:layout_constraintStart_toStartOf="@+id/plusShapedKeypad"
        tools:layout_editor_absoluteY="163dp"
        android:visibility="invisible"/>
    <TextView
        android:id="@+id/helpObjective"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/mainscreen_help_objective"
        app:layout_constraintBottom_toTopOf="@id/helpPlusShapedKeypad"
        app:layout_constraintStart_toStartOf="@id/helpPlusShapedKeypad"
        app:layout_constraintEnd_toEndOf="@id/helpPlusShapedKeypad"
        tools:layout_editor_absoluteY="84dp"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/helpButtonF"
        android:layout_width="270px"
        android:layout_height="wrap_content"
        android:text="@string/mainscreen_help_toggle_F"
        app:layout_constraintEnd_toStartOf="@id/mine_controller"
        app:layout_constraintTop_toTopOf="@id/mine_controller"
        android:visibility="invisible"/>
    <TextView
        android:id="@+id/helpButtonC"
        android:layout_width="270px"
        android:layout_height="wrap_content"
        android:text="@string/mainscreen_help_toggle_C"
        app:layout_constraintEnd_toStartOf="@id/mine_controller"
        app:layout_constraintBottom_toBottomOf="@id/mine_controller"
        tools:layout_editor_absoluteX="127dp"
        tools:layout_editor_absoluteY="401dp"
        android:visibility="invisible"
        />


</android.support.constraint.ConstraintLayout>